# ff-analytics

./: .gitignore  pyproject.toml
evidence/: .env  .gitignore
evidence/.evidence/customization/: .profile.json
evidence/pages/: index.md  owner-luck.md
evidence/sources/ff_analytics/: connection.yaml  rolling_wins_by_year.sql  win_loss_against_avg.sql  win_loss_by_opponent.sql  win_loss_by_owner.sql
ff_analytics/: create_database.py  ff_analytics.py  get_data.py  insert_data.py  make_csvs.py
ff_analytics_dbt/: dbt_project.yml
ff_analytics_dbt/models/marts/: fct_matchups_enhanced.sql
ff_analytics_dbt/models/reports/: rolling_wins_by_year.sql  win_loss_against_avg.sql  win_loss_by_opponent.sql  win_loss_by_owner.sql
ff_analytics_dbt/models/staging/: _raw_sources.yml  stg_box_players.sql  stg_box_scores.sql  stg_draft.sql  stg_matchups.sql  stg_players.sql  stg_settings.sql  stg_teams.sql
ff_analytics_dbt/seeds/: team_owners.csv
