[tool.poetry]
name = "ff-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ff_analytics"}]

[tool.poetry.dependencies]
python = "^3.9"
espn-api = "^0.36.0"
pandas = "^2.1.4"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.28"
dbt-postgres = "^1.7.10"
dbt-core = "^1.7.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
